--- a/SurrogateRank_tutorial.Rmd
+++ b/SurrogateRank_tutorial.Rmd
@@ -5,7 +5,14 @@ output:
 ---
 
 ```{r global_options, echo=FALSE}
-knitr::opts_chunk$set(fig.width=7, warning=FALSE, tidy=TRUE, tidy.opts=list(width.cutoff=60))
+knitr::opts_chunk$set(fig.width=13, warning=FALSE, tidy=TRUE, tidy.opts=list(width.cutoff=60))
+```
+
+```{r}
+library(dplyr)
+library(ggplot2)
+library(pbmcapply)
+library(stats)
 ```
 
 # Main Functions
@@ -14,6 +21,7 @@ We will go through an example using the main functions in the **SurrogateRank** 
 
 ```{r results = "hide", message=FALSE}
 #install.packages("SurrogateRank")
+# remotes::install_github("laylaparast/SurrogateRank", ref = "devel")
 library(SurrogateRank)
 ```
 
@@ -37,22 +45,118 @@ Next, we formally test this **delta** using **test.surrogate**. The required arg
 
 ```{r}
 test.surrogate(yone = example.data$y1, yzero = example.data$y0, sone = example.data$s1, szero = example.data$s0)
-
 ```
 
 Optional arguments that **test.surrogate** takes are 1) **epsilon** which is the threshold to use for testing delta where the default calculates epsilon as a function of desired power for testing for a treatment effect using the surrogate, 2) **power.want.s** which is the desired power in (1), used to calculate **epsilon** if it is not provided; the default is 0.7, 3) **u.y.hyp** which is the hypothesized value of u.y used in the calculation of epsilon; the default is to use the estimated value **u.y**. For example, in the code below I specify the epsilon, making it more strict than what is used by default above.
 
 ```{r}
 test.surrogate(yone = example.data$y1, yzero = example.data$y0, sone = example.data$s1, szero = example.data$s0, epsilon = 0.1)
-
 ```
 
 Next, the function **est.power** calculates the estimated power to detect a valid surrogate given a total sample size and specified alternative. This function would generally be used in a design stage before data are collected. The arguments are: 1) **n.total**, the total sample size in the study, 2) **rho**, the rank correlation between Y and S in group 0, default is 0.8, 3) **u.y.alt**, the specified alternative for **u.y**, 4) **delta.alt**, the specified alternative for **delta**, 5) **power.want.s**, the desired power for **u.s**, default is 0.7. The function returns the estimated power to detect a valid surrogate, given these specifications. For example, let's say we are planning a study with a sample size of 50 and based on prior data or domain knowledge we specify the rank correlation between Y and S in group 0 to be 0.7, the alternative for **u.y** to be 0.9, and the specified alternative for **delta** to be 0.05, and our desired power for **u.s** is 0.6. Then, our estimated power is 0.84. 
 
 ```{r}
 est.power(n.total = 50, rho = 0.7, u.y.alt=0.9, delta.alt = 0.05, power.want.s=0.6)
-
 ```
+
+# RISE : Rank-Based Identification of High-Dimensional Surrogate Markers
+The package also implements the rank-based identification of surrogate markers in the high-dimensional setting. This is described in the paper Hughes A., Parast L., Thiébaut R., Hejblum B.P. (2025). RISE : Two-Stage Rank-Based Identification of High-Dimensional Surrogate Markers Applied to Vaccinology (https://arxiv.org/abs/2502.03030).
+
+Again, let's start by looking at an example dataset from the package. 
+
+```{r}
+data(example.data.highdim)
+names(example.data.highdim)
+```
+Like before, this data contains 25 observations from a treatment group (group 1) and 25 observations from a control group (group 0). As in the other example, **y1** and **y0** are the values of the primary response in the treated and control group, respectively. However, this time, **s1** and **s0** are matrices of 1000 candidate surrogate markers in the treated and control group, respectively. The final element of the data, **hyp**, gives whether the surrogate candidate is valid or not, where 'null false' corresponds to a valid surrogate candidate and 'null true' an invalid surrogate. 
+
+RISE works in two stages, which are generally applied on different (random) splits of the data in order to avoid overfitting. The first stage, called screening, allows for a selection of strong candidate surrogates by applying the aforementioned univariate test to each candidate, then correcting the p-values for the high multiplicity of tests. Let's perform the screening stage using the **rise.screen()** function on the example data (without sample splitting).
+
+```{r}
+screen.result = rise.screen(yone = example.data.highdim$y1,
+            yzero = example.data.highdim$y0,
+            sone = example.data.highdim$s1,
+            szero = example.data.highdim$s0,
+            power.want.s = 0.8)
+```
+
+Let's check the outputs of this function. The **screening.metrics** element returns a data frame with results from the testing of each marker one-by-one. 
+
+```{r}
+screen.result[["screening.metrics"]] %>% head()
+```
+The next element **significant.markers** gives the names of the markers which were judged significant at the provided $\alpha$ level (0.05 by default) after test multiplicity correction. Let's print the first few. 
+
+```{r}
+screen.result[["significant.markers"]] %>% head()
+```
+How many markers were determined significant?
+
+```{r}
+screen.result[["significant.markers"]] %>% length()
+```
+The final element is a data frame giving the weights to pass to the evaluation stage to form a synthetic marker as a weighted, standardised sum of the markers screened as significant in the screening stage. These weights are the inverse of the absolute delta values from the screening stage. 
+
+```{r}
+screen.result[["screening.weights"]] %>% head()
+```
+Now let's perform the evaluation stage using the **rise.evaluate()** function. For simplicity, let's evaluate on the same data on which we screened. Although, in practice, you should probably perform sample splitting on the data to avoid overfitting bias. Note that we have to pass some elements from the screening stage into this function (the names of the significant markers and the weights).
+
+```{r}
+evaluate.results = rise.evaluate(yone = example.data.highdim$y1,
+            yzero = example.data.highdim$y0,
+            sone = example.data.highdim$s1,
+            szero = example.data.highdim$s0,
+            power.want.s = 0.8,
+            markers = screen.result[["significant.markers"]],
+            screening.weights = screen.result[["screening.weights"]])
+```
+
+Let's look at the elements of this output. The first is **individual.metrics**, which is basically a re-application of the screening phase in the evaluation data. This can be a useful tool for assessing overfitting - if none of the markers which were significant in the screening phase were significant in the evaluation data, there is probably some overfitting going on. Since, in this example, we used exactly the same data to screen and evaluate, this will give us the same results as before (with the adjusted p-values slightly different due to the different number of tests).
+
+```{r}
+evaluate.results[["individual.metrics"]] %>% head()
+```
+
+The second element, **gamma.s** gives us the values of the composite marker $\gamma$ for the treated and untreated groups. 
+
+```{r}
+evaluate.results[["gamma.s"]][["gamma.s.one"]] %>% head() # treated gamma
+evaluate.results[["gamma.s"]][["gamma.s.zero"]] %>% head()# untreated gamma
+```
+The third element **gamma.s.evaluate** gives us the results of the testing of gamma as a univariate surrogate in the evaluation data. 
+
+```{r}
+evaluate.results[["gamma.s.evaluate"]]
+```
+
+The final element, **gamma.s.plot**, gives us a plot of the composite marker gamma.s against the response in the evaluation data. 
+```{r}
+evaluate.results[["gamma.s.plot"]]
+```
+
+We can also apply both stages of RISE together with the function **test.surrogate.rise()**. This gives us two elements, **screening.results** and **evaluation.results** which are exactly the outputs of the individual screening and evaluation functions as explained above. Note that this function automatically performs random sample splitting on the data, by default at ratio screening:evaluation of 2:1. This ratio is controlled by the **screen.proportion** argument. If this is set to 1, the screening and evaluation are performed on the same dataset. 
+
+```{r}
+test.surrogate.rise.result = test.surrogate.rise(yone = example.data.highdim$y1,
+            yzero = example.data.highdim$y0,
+            sone = example.data.highdim$s1,
+            szero = example.data.highdim$s0,
+            power.want.s = 0.8,
+            screen.proportion = 2/3)
+```
+
+Let's check the results from this sample-split application of RISE. How many significant markers were identified?
+
+```{r}
+test.surrogate.rise.result[["screening.results"]][["significant.markers"]] %>% length()
+```
+Now, what were the resulting metrics and plot in the 1/3 of the data left for evaluation?
+```{r}
+test.surrogate.rise.result[["evaluation.results"]][["gamma.s.evaluate"]]
+test.surrogate.rise.result[["evaluation.results"]][["gamma.s.plot"]]
+```
+
 
 That's all for now!
 
